--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Ip and countries IP detection API using user requests",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsc-watch --onSuccess \"node ./dist/server.js\""
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,17 @@
   "bugs": {
     "url": "https://github.com/mandros1/ip-detection-api/issues"
   },
-  "homepage": "https://github.com/mandros1/ip-detection-api#readme"
+  "homepage": "https://github.com/mandros1/ip-detection-api#readme",
+  "dependencies": {
+    "@types/compression": "^1.0.1",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.2",
+    "@types/node": "^12.12.14",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^5.0.0-alpha.7",
+    "tsc-watch": "^4.0.0",
+    "typescript": "^3.7.3"
+  }
 }
