--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc-watch --onSuccess \"node ./dist/server.js\""
+    "dev": "tsc-watch --onSuccess \"node ./dist/server.js\"",
+    "db:migrate": "knex migrate:latest",
+    "db:rollback": "knex migrate:rollback"
   },
   "repository": {
     "type": "git",
@@ -24,8 +26,14 @@
     "@types/node": "^12.12.14",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "csv-parser": "^2.3.2",
     "dotenv": "^8.2.0",
     "express": "^5.0.0-alpha.7",
+    "ip": "^1.1.5",
+    "knex": "^0.20.3",
+    "netmask": "^1.0.6",
+    "objection": "^2.0.2",
+    "pg": "^7.14.0",
     "tsc-watch": "^4.0.0",
     "typescript": "^3.7.3"
   }
