--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc-watch --onSuccess \"node ./dist/server.js\"",
+    "dev": "tsc-watch --onSuccess \"node ./dist/src/server.js\"",
+    "build": "tsc",
     "db:migrate": "knex migrate:latest",
     "db:rollback": "knex migrate:rollback"
   },
@@ -31,7 +32,6 @@
     "express": "^5.0.0-alpha.7",
     "ip": "^1.1.5",
     "knex": "^0.20.3",
-    "netmask": "^1.0.6",
     "objection": "^2.0.2",
     "pg": "^7.14.0",
     "tsc-watch": "^4.0.0",
