--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "knex": "^0.20.3",
     "objection": "^2.0.2",
     "pg": "^7.14.0",
+    "request-ip": "^2.1.3",
     "tsc-watch": "^4.0.0",
     "typescript": "^3.7.3"
   }
